# signurlarity

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  INTEGRATION_README.md  README.md  RENOVATE.md  conftest.py  new_presigner.py  pyproject.toml  renovate.json
.github/workflows/: comment-perf.yml  deployment.yml  main.yml  release-please.yml
benchmark_tests/: __main__.py  benchmarks.py  conftest.py  test_benchmark.py  test_benchmark_aio.py  test_benchmark_aio_cm.py  test_benchmark_cm.py
perf_tests/: __main__.py  conftest.py  test_perf.py  test_perf_aio.py  test_perf_aio_cm.py  test_perf_cm.py  test_presign.py  test_profile.py  test_profile_aio.py
profiling_tests/: conftest.py  test_profile_aio.py  test_profile_sync.py
src/signurlarity/: __init__.py  _base.py  client.py  exceptions.py  presigner.py
src/signurlarity/aio/: __init__.py  client.py
tests/: conftest.py  test_client.py  test_client_aio.py  test_clients.py  test_context_manager.py  test_perf.py  test_presigner.py
