[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/signurlarity"]

[project]
name = "signurlarity"
description = "Lightweight library to presign URLs compatible with boto3"

readme = "README.md"
requires-python = ">=3.11"
keywords = []
license = { text = "GPL-3.0-only" }
dynamic = ["version"]
dependencies = ["httpx>=0.24.0", "orjson"]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: System :: Distributed Computing",
]

[project.urls]
Homepage = "https://github.com/diracx/signurlarity"
Repository = "https://github.com/diracx/signurlarity"


[project.optional-dependencies]
testing = [
  "pytest",
  "rich",
  "pytest-benchmark",
  "pytest-asyncio",
  "aiobotocore>=2.15",
  "botocore>=1.35",
  "moto[server]",
  "httpx",
  "pytest-xdist",
  "ty",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"


[tool.ruff]
src = ["src", "tests", "perf_tests"]
# exclude = ["diracx-client/src/diracx/client"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "B",   # flake8-bugbear
  "I",   # isort
  "PLE", # pylint errors
  "D",   # pydocstyle
  # "UP",   # pyUpgrade
  "FLY", # flynt
  "DTZ", # flake8-datetimez
  "S",   # flake8-bandit
  "N",   # pep8-naming
]
ignore = [
  "B905",
  "B006",
  "S101", # bandit: use of assert https://docs.astral.sh/ruff/rules/assert/
  # TODO: Maybe enable these
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
  # non lower case variables (https://docs.astral.sh/ruff/rules/non-lowercase-variable-in-function/)
  "N806",
  # invalid arguments (capital Bucket for example)
  "N803",
  # TODO CHRIS Use fstrings instead of join
  "FLY002",
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.format]
docstring-code-format = true


[tool.isort]
profile = "black"


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
pre-commit = { features = ["pre-commit"], no-default-feature = true }
py311 = { features = ["testing", "py311"] }
py312 = { features = ["testing", "py312"] }
py313 = { features = ["testing", "py313"] }
py314 = { features = ["testing", "py314"] }

[tool.pixi.feature.testing.dependencies]
flamegraph-pl = "*"

[tool.pixi.feature.testing.pypi-dependencies]
flameprof = "*"
signurlarity = { path = ".", editable = true }


# Features for running pre-commit hooks
[tool.pixi.feature.pre-commit.dependencies]
pre-commit = "*"
[tool.pixi.feature.pre-commit.tasks]
pre-commit = "pre-commit"


[tool.pixi.tasks]
unit-test = "pytest -v"
perf-test = "pytest -v perf_tests/test_perf.py"
display-perf-comparison = "python perf_tests/__main__.py"
profile-test = "pytest -v perf_tests/test_profile.py"


[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.py314.dependencies]
python = "3.14.*"


[tool.pixi.tasks.perf-comparison]
depends-on = [
  { task = "perf-test", environment = "py311", args = [
    "--perf-test-dir",
    "/tmp/perf_test/",
  ] },
  { task = "perf-test", environment = "py312", args = [
    "--perf-test-dir",
    "/tmp/perf_test/",
  ] },
  { task = "perf-test", environment = "py313", args = [
    "--perf-test-dir",
    "/tmp/perf_test/",
  ] },
  { task = "perf-test", environment = "py314", args = [
    "--perf-test-dir",
    "/tmp/perf_test/",
  ] },
  { task = "display-perf-comparison", environment = "py314", args = [
    "--perf-test-dir",
    "/tmp/perf_test/",
  ] },
]
