[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/signurlarity"]

[project]
name = "signurlarity"
description = "Lightweight library to presign URLs compatible with boto3"

readme = "README.md"
requires-python = ">=3.11"
keywords = []
license = { text = "GPL-3.0-only" }
dynamic = ["version"]
dependencies = ["httpx>=0.24.0", "orjson", "cryptography>=41.0.0"]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: System :: Distributed Computing",
]

[project.urls]
Homepage = "https://github.com/diracx/signurlarity"
Repository = "https://github.com/diracx/signurlarity"


[project.optional-dependencies]
testing = [
  "pytest",
  "rich",
  "pytest-benchmark",
  "pytest-asyncio",
  "aiobotocore>=2.15",
  "botocore>=1.35",
  "moto[server]",
  "httpx",
  "pytest-xdist",
  "ty",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"


[tool.ruff]
src = ["src", "tests", "benchmark_tests", "profiling_tests"]
# exclude = ["diracx-client/src/diracx/client"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "B",   # flake8-bugbear
  "I",   # isort
  "PLE", # pylint errors
  "D",   # pydocstyle
  # "UP",   # pyUpgrade
  "FLY", # flynt
  "DTZ", # flake8-datetimez
  "S",   # flake8-bandit
  "N",   # pep8-naming
]
ignore = [
  "B905",
  "B006",
  "S101", # bandit: use of assert https://docs.astral.sh/ruff/rules/assert/
  # TODO: Maybe enable these
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
  # non lower case variables (https://docs.astral.sh/ruff/rules/non-lowercase-variable-in-function/)
  "N806",
  # invalid arguments (capital Bucket for example)
  "N803",
  # TODO CHRIS Use fstrings instead of join
  "FLY002",
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.format]
docstring-code-format = true


[tool.isort]
profile = "black"


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
pre-commit = { features = ["pre-commit"], no-default-feature = true }
py311 = { features = ["testing", "py311"] }
py312 = { features = ["testing", "py312"] }
py313 = { features = ["testing", "py313"] }
py314 = { features = ["testing", "py314"] }

[tool.pixi.feature.testing.dependencies]
flamegraph-pl = "*"
seaweedfs = "*"

[tool.pixi.feature.testing.pypi-dependencies]
flameprof = "*"
signurlarity = { path = ".", editable = true }


# Features for running pre-commit hooks
[tool.pixi.feature.pre-commit.dependencies]
pre-commit = "*"
[tool.pixi.feature.pre-commit.tasks]
pre-commit = { cmd = "pre-commit", description = "Run pre-commit" }


[tool.pixi.tasks]
unit-test = {cmd = "pytest -v", description = "Run the unit tests"}
benchmark = { cmd = "pytest -v benchmark_tests/", description = "Run a benchmark comparison against boto" }
display-benchmark-comparison = {cmd = "python benchmark_tests/__main__.py", description = "Display in a human readable way the benchmark comparison"}
profile-test = {cmd = "pytest -v profiling_tests/", description="Run profiling of the methods"}


[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.py314.dependencies]
python = "3.14.*"


[tool.pixi.tasks.full-benchmark]
args = ["test_results_dir"]
description = "Run benchmark for all the python versions and display the output"
depends-on = [
  { task = "benchmark", environment = "py311", args = [
    "--test-results-dir",
    "{{ test_results_dir }}",
  ] },
  { task = "benchmark", environment = "py312", args = [
    "--test-results-dir",
    "{{ test_results_dir }}",
  ] },
  { task = "benchmark", environment = "py313", args = [
    "--test-results-dir",
    "{{ test_results_dir }}",
  ] },
  { task = "benchmark", environment = "py314", args = [
    "--test-results-dir",
    "{{ test_results_dir }}",
  ] },
  { task = "display-benchmark-comparison", environment = "py314", args = [
    "--test-results-dir",
    "{{ test_results_dir }}",
  ] },
]
